# servant-backend-playNFT

./: .gitignore  LICENSE  README.md  cabal.project  flake.nix  servant-backend-playnft.cabal
app/: Main.hs
